# b-bot

./: Cargo.toml  LICENSE  README.md  SPEC.md
src/: cli.rs  codex.rs  error.rs  gap_store.rs  main.rs  ollama.rs  planner.rs  tools.rs
src/tools/: coverage.rs  docker.rs  loc.rs
