[package]
name = "bbot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bollard = "0.20.2"
cargo-tarpaulin = "0.35.2"
clap = { version = "4.5.38", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.117", features = ["full", "parsing", "printing", "visit", "visit-mut"] }
thiserror = "2.0.12"
tokei = { version = "14.0.0", default-features = false }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
